--- a/_config.yml
+++ b/_config.yml
@@ -20,11 +20,11 @@ permalink:           none
 plugins:             [jekyll-paginate, jekyll-sitemap, jekyll-feed, jekyll-seo-tag]
 
 # Customise atom feed settings (this is where Jekyll-Feed gets configuration information)
-title:		           'Lagrange'
-description:	       'a minimalist Jekyll theme'
+title:		           ''
+description:	       'Lagrange: a minimalist Jekyll theme'
 descriptionz:         'My blog'
 author:              'Paul Le'
-github.url:          'https://github.com/cynicaldevil/cynicaldevil.github.io/tree/master'
+github.url:          'https://github.com/nikhilshagri/nikhilshagri.github.io/tree/master'
 
 # RSS 2.0 can be used instead of Atom by uncommenting following two lines
 #feed:
